import org.gradle.api.tasks.Copy
import org.gradle.api.tasks.compile.JavaCompile
import org.gradle.jvm.toolchain.JavaLanguageVersion

plugins {
    id 'java-library'
    alias(libs.plugins.shadow)
    alias(libs.plugins.slimjar)
}

group = 'art.arcane'
version = '1.1.0-26.2'
def apiVersion = '26.2'
def main = 'art.arcane.hiddenore.HiddenOre'
def lib = 'art.arcane.hiddenore.libs'
String volmLibCoordinate = providers.gradleProperty('volmLibCoordinate')
    .orElse('com.github.VolmitSoftware:VolmLib:master-SNAPSHOT')
    .get()
String authTokenProperty = providers.gradleProperty('authToken').orNull
String jitpackAuthToken = authTokenProperty ?: providers.gradleProperty('jitpackAuthToken').orNull

def shadowJarTask = tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar)
tasks.named('slimJar').get()

registerCustomOutputTaskUnix('PsychoLT', '/Users/brianfopiano/Developer/RemoteGit/[Minecraft Server]/consumers/plugin-consumers/dropins/plugins')

tasks.named('jar', org.gradle.api.tasks.bundling.Jar).configure {
    archiveClassifier.set('thin')
}

tasks.named('build').configure {
    dependsOn(shadowJarTask)
}

shadowJarTask.configure {
    archiveClassifier.set('')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    minimize()
    relocate('io.github.slimjar', "${lib}.slimjar")
    relocate('org.bstats', "${lib}.bstats")
    relocate('net.kyori', "${lib}.kyori")
}

tasks.named('processResources').configure {
    def pluginProperties = [
        name      : rootProject.name,
        version   : project.version,
        main      : main,
        apiVersion: apiVersion,
    ]

    inputs.properties(pluginProperties)
    filesMatching('**/plugin.yml') {
        expand(pluginProperties)
    }
}

tasks.named('compileJava', JavaCompile).configure {
    options.compilerArgs.add('-parameters')
    options.encoding = 'UTF-8'
    options.debugOptions.debugLevel = 'none'
    options.release.set(25)
}

slimJar {
    relocate('org.bstats', "${lib}.bstats")
    relocate('net.kyori', "${lib}.kyori")
}

repositories {
    mavenCentral()
    maven {
        url = uri('https://repo.papermc.io/repository/maven-public/')
    }
    maven {
        url = uri('https://jitpack.io')
        if (jitpackAuthToken != null) {
            credentials {
                username = jitpackAuthToken
                password = '.'
            }
        }
    }
}

dependencies {
    implementation('de.crazydev22.slimjar.helper:spigot:2.1.9')
    compileOnly(libs.paper)
    implementation(volmLibCoordinate) {
        changing = true
        transitive = false
    }
    slim(libs.bstats)
    slim('net.kyori:adventure-api:5.1.1')
    slim('net.kyori:adventure-text-minimessage:5.1.1')
    slim('net.kyori:adventure-text-serializer-legacy:5.1.1')
    slim('net.kyori:adventure-platform-bukkit:4.4.1') {
        exclude group: 'net.md-5', module: 'bungeecord-chat'
    }
    testImplementation('junit:junit:4.13.2')
    testImplementation(libs.paper)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations.configureEach {
    resolutionStrategy.cacheChangingModulesFor(0, 'seconds')
    resolutionStrategy.cacheDynamicVersionsFor(0, 'seconds')
}

if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_25)) {
    System.err.println()
    System.err.println('=========================================================================================================')
    System.err.println('You must run gradle on Java 25 or newer. You are using ' + JavaVersion.current())
    System.err.println()
    System.err.println('=== For IDEs ===')
    System.err.println('1. Configure the project for Java 25')
    System.err.println('2. Configure the bundled gradle to use Java 25 in settings')
    System.err.println()
    System.err.println('=== For Command Line (gradlew) ===')
    System.err.println('1. Install JDK 25 from https://adoptium.net/temurin/releases/?version=25')
    System.err.println('2. Set JAVA_HOME environment variable to the new jdk installation folder')
    System.err.println('3. Open a new command prompt window to get the new environment variables if need be.')
    System.err.println('=========================================================================================================')
    System.err.println()
    System.exit(69)
}

void registerCustomOutputTask(String name, String path, boolean doRename = true) {
    if (!System.getProperty('os.name').toLowerCase().contains('windows')) {
        return
    }

    createOutputTask(name, path, doRename)
}

void registerCustomOutputTaskUnix(String name, String path, boolean doRename = true) {
    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
        return
    }

    createOutputTask(name, path, doRename)
}

void createOutputTask(String name, String path, boolean doRename = true) {
    def shadowJarTask = tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar)
    tasks.register("build${name}", Copy) {
        group = 'development'
        outputs.upToDateWhen { false }
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        dependsOn(shadowJarTask)
        from(shadowJarTask.flatMap { it.archiveFile })
        into(file(path))
        if (doRename) {
            rename { String ignored -> 'HiddenOre.jar' }
        }
    }
}
